data/all_generated_tests/raw_wast_tests/br_IncorrectConditionEvaluation_741.wast
;; 2. **Test Description**: Branch to a label with type requirements not satisfied by the current top of the stack.    - **Constraint Checked**: Ensures that the `checkTargetArgs` verifies type requirements of the operands as specified.    - **Incorrect Condition Evaluation**: Incorrect implementation could allow the branch to proceed despite type mismatches.

(assert_invalid
  (module (func $branch-type-mismatch
    (block (result i32) (br 0 (i64.const 42)) (i32.const 1))
  ))
  "type mismatch"
)